main/css/main.css
html{
	background-color: #000;
}
body{
	overflow-x: hidden;
	background-color: #000 !important;
	animation: bg-transitions 5s infinite alternate;
  -moz-animation: bg-transitions 5s infinite alternate;
  -webkit-animation: bg-transitions 5s infinite alternate;
	/*height: 120vh;*/
}

.uk-dotnav>*>*{
	background-color: transparent;
	border: 2px solid #fff;
	opacity: 0.5;
	width: 12px;
	height: 12px;
}
.uk-dotnav>.uk-active>*{
	background-color: #fff;
	opacity: 0.7;
	transition: 1s;
	width: 14px;
	height: 14px;
}
#particles-js {
  /*position: absolute;*/
  width: 100%;
  height: 105vh;
  animation: bg-transitions 6s infinite alternate;
  -moz-animation: bg-transitions 6s infinite alternate;
  -webkit-animation: bg-transitions 6s infinite alternate;
  background-image: url("");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
}
.uk-tooltip{
	background-color: transparent;
	font-size: 14px;
	letter-spacing: 1px;
}
#logo-area{
	position: absolute;
	top: 20%;
	z-index: +1;
}
.hidden{
	display: none;
}

@-webkit-keyframes bg-transitions{
	0% {background-color: #0D0620;}
	20% {background-color: #1C0C2B;}
	40% {background-color: #041024;}
	80% {background-color: #042418;}
	100% {background-color: #050309;}
}
@keyframes bg-transitions{
	0% {background-color: #0D0620;}
	20% {background-color: #1C0C2B;}
	40% {background-color: #041024;}
	80% {background-color: #042418;}
	100% {background-color: #050309;}
}

.logo-info-container h4{
	color : #fff !important;
}

.main-content{
	letter-spacing: 3px; font-weight: 300 !important; font-size: 24px; opacity: 0.9;
}
svg text{
	font-family: "FontAwesome";
	color : #fff !important;
	font-size : 20px;
}

.part-icon-cont{
	color:#fff; 
	position: absolute; 
	left:0; 
	top:22%;
	width:100%;
	font-size:38px !important;
}

#map{
	-webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 64% 75%, 51% 100%, 37% 76%, 0% 75%);
clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 64% 75%, 51% 100%, 37% 76%, 0% 75%);
}
.input-feild{
	background-color: transparent !important;
	border : 2px solid #2d9687 !important;
	color : #fff !important;
	/*height: 40px !important;*/
	font-size : 22px !important;
	/*padding-top: 1px; !important;*/
	letter-spacing: 2px !important;
}
#honeycomb svg polygon{
	z-index: 999;
}

#honeycomb svg image{
	-webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
}
.uk-accordion li{
	border : 4px solid #AB0037;
	padding : 20px;
	border-radius: 2%;
}
.uk-accordion-title{
	color : #2d9687;
	font-weight: bold;
}
.uk-accordion-content{
	font-size : 18px;
	font-weight: 300;
}

#menu-icon{
	display : none;
}

@media (max-width: 760px) {
	/*.part-icon-cont{
		left:73px;
	}*/

	.main-content{
		font-size : 20px;
	}
	#dot-nav{
		display: none;
	}
	#menu-icon{
		display: block;
	}
}

.line-drawing, .illustration {
	display: none;
	-webkit-transition: opacity 0.5s;
	transition: opacity 0.5s;
}

.line-drawing path {
	fill: none;
	stroke: #AB0037;
	stroke-width: 5;
}

.hidden-logo{
	display: none;
	font-size: 24px !important;
}

.line-drawing foreign-object{
	color:#2d9687;
}

body{
    color:#fff;
    font:18px/28px "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight:300;
}

.icon-container{
	border: 2px solid #AB0037;
	font-size: 28px;
	color: #fff;
	border-radius: 50%;
}
/* Main Heading Style Starts */

.main-head{
    text-align:center;
    padding:0 0 40px;
}
.main-head h2, .main-head p{
}
.main-head h2{
    padding:0 0 20px;
}
.main-head p{
    font-size:24px;
    line-height:36px;
}


.clip-hexagon{
	/*border: 5px solid #2d9687;*/
	/*background-image: url("../images/1.jpg");*/
	background-color: #1B7385;
	box-sizing: border-box;
	display: inline-block;
	/*-webkit-clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);*/
/*clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);*/
-webkit-clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
	width : 220px !important;
	height: 220px !important;
}

.clip-hexagon img{
	position: relative;
	top:5px;
	/*left: 20px;*/
	width: 210px;
	height: 210px;
	/*-webkit-clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);*/
/*clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);*/
		-webkit-clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
	/*border: 5px solid #2d9687;*/
	transition: all 0.5s;

}
.clip-hexagon .uk-overlay-primary{
	/*position: relative;*/
	/*top:5px;*/
	/*left: 20px;*/
	/*width: 210px;*/
	/*height: 210px;*/
	/*-webkit-clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);*/
/*clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);*/

-webkit-clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
	/*border: 5px solid #2d9687;*/
	transition: all 0.5s;

}
.hack-info{

}

.clip-hexagon>.over{
	display: none;
	position: absolute;
	top:5px;
	left: 24px;
	width: 211px;
	height: 210px;
	background-color: #fff;
	opacity: 0.5;
	-webkit-clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
	clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);

}

.clip-hexagon>.uk-overlay-default{
	display: none;
	position: absolute;
	top:5px;
	left: 24px;
	width: 211px;
	height: 210px;
	background-color: #fff;
	opacity: 0.5;
	-webkit-clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);
	clip-path: polygon(0% 15%, 12% 10%, 15% 0%, 85% 0%, 89% 11%, 100% 15%, 100% 85%, 90% 88%, 85% 100%, 15% 100%, 12% 89%, 0% 85%);

}
.clip-hexagon span{
	z-index: 999;
	color : #000;
	font-weight: bold;
}

@media (max-width: 760px) {
	body{
		overflow: scroll;
	}
	/*#svg-logos{
		display: none;
	}*/
}

.header-overlay h1{
    margin-top:100px;
    margin-bottom: 100px;
}

